# longevity-redflag-bench

./: .env.example  .gitignore  README.md  api_server.py  chat_longevity.py  diagnose.py  prove_format.py  pyproject.toml  requirements.txt  test.py  verify.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css
data/: README.md
judge/: demo_trace_scorer.py  famous_genes.csv  fetch_real_runs.py  gene_systems.csv  judge.py  live_scorer.py  mgi_genes.txt  runs.jsonl  runs_mock.jsonl  score_trace.py  scores.jsonl
judge/v2/: calibrate.py  calibration.jsonl  judge_v2.py
mock/: make_mock.py  mock_records.jsonl
mouse/: 01_discover_via_api.py  01_fetch.py  02_explore.py  02_prepare.py  03_fetch_biomarkers.py  03_train.py  04_evaluate.py  05_train_yuan.py  06_build_combined.py  PLAN.md
mouse/data/: mouse_lifespan.csv  mouse_lifespan_long.csv  yuan2_animaldata.csv
mouse/models/: combined_best_model.pkl  yuan_best_model.pkl
mouse/results/: combined_predictions.csv  explore_summary.txt  feature_importance.csv  model_comparison.csv  per_strain_summary.csv  predictions.csv  yuan_predictions.csv
results/: aggregate.py  dashboard_data.json  full_comparison.py  llm_vs_xgboost.py  mouse_comparison.csv  mouse_comparison.py  mouse_comparison_full.csv
schema/: records.py
scripts/: build_aux_datasets.py  build_mgi_dataset.py  contamination_probe.py  run_all.py  smoke_endpoint.py
src/: config.py
src/baselines/: baselines.py
tasks/: context_cases.yaml  redflags.csv
validate/: validate_jsonl.py
(+18 files in other folders)
